--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -12,4 +12,12 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
+  transition: all 1s ease-out;
+}
+.btn:hover,
+.btn:focus {
+  background-color: aliceblue;
+  color: black;
+  font-weight: 700;
+  outline: 3px solid rgb(9, 9, 9);
 }
