--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,6 +2,7 @@
   -webkit-box-shadow: -2px 6px 14px -4px rgb(145, 143, 143);
   -moz-box-shadow: -2px 6px 14px -4px rgb(80, 78, 78);
   box-shadow: -2px 6px 14px -4px rgb(106, 105, 105);
+  background-color: rgb(255, 253, 253);
 }
 
 .footerSection {
