--- a/src/components/Info/Info.module.css
+++ b/src/components/Info/Info.module.css
@@ -1,10 +1,12 @@
 .infoContainer {
-  padding-top: 210px;
   display: flex;
-  gap: 227px;
+  flex-direction: column;
+  gap: 20px;
+  padding-top: 210px;
+  justify-content: center;
+  align-items: center;
 }
-.infoSection {
-}
+
 .infoDescription {
   margin-top: 40px;
   max-width: 558px;
@@ -38,6 +40,10 @@
 @media only screen and (min-width: 768px) {
   .container {
     max-width: 738px;
+  }
+  .infoContainer {
+    flex-direction: row;
+    gap: 227px;
   }
 }
 
