--- a/src/components/Order/Order.module.css
+++ b/src/components/Order/Order.module.css
@@ -4,7 +4,7 @@
   gap: 21px;
 }
 .overlay {
-  background-image: url(/src/assets/Order/order.png);
+  background-image: url(/src/image/Order/order.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
