--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,15 +1,25 @@
 .border {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  /* min-height: 100vh; */
+  /* Делаем контейнер высотой как минимум во всю видимую область */
   -webkit-box-shadow: -2px 6px 14px -4px rgb(145, 143, 143);
   -moz-box-shadow: -2px 6px 14px -4px rgb(80, 78, 78);
   box-shadow: -2px 6px 14px -4px rgb(106, 105, 105);
   background-color: rgb(255, 253, 253);
+  position: relative;
+  margin-top: 100px;
 }
 
 .footerSection {
   display: flex;
-  gap: 50%;
-  margin-top: 50px;
+  flex-shrink: 0; /* Не позволяет футеру сжиматься */
   padding: 30px 20px;
+  height: 50px;
+  gap: 50%;
 }
 .container {
   min-width: 320px;
@@ -32,4 +42,10 @@
   .container {
     max-width: 1158px;
   }
+}
+/* Применяем абсолютное позиционирование к футеру */
+.footerSection {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
 }
