--- a/src/pages/Basket/basket.module.css
+++ b/src/pages/Basket/basket.module.css
@@ -9,11 +9,7 @@
 
   list-style: none;
 }
-@media only screen and (min-width: 768px) {
-  .productList {
-    width: 1158px;
-  }
-}
+
 .container {
   min-width: 320px;
   max-width: 428px;
@@ -34,5 +30,34 @@
 @media only screen and (min-width: 1158px) {
   .container {
     max-width: 1158px;
+  }
+}
+.titleDefault {
+  /* margin-right: 50px; */
+  font-size: 34px;
+  line-height: 30px;
+  color: #1b1b1d;
+  font-weight: 700;
+}
+.basketDefault {
+  display: flex;
+  width: 100%;
+  height: 100%;
+
+  justify-content: center;
+  align-items: center;
+  margin-top: 30%;
+
+  margin-bottom: 30%;
+}
+@media only screen and (min-width: 768px) {
+  .productList {
+    width: 1158px;
+  }
+  .titleDefault {
+    /* margin-right: 50px; */
+    font-size: 64px;
+    line-height: 60px;
+    color: #1b1b1d;
   }
 }
